--- a/cluster_models_1e-7/Rel_Het_model1_16ind_100gen/cluster_rel_het.Rmd
+++ b/cluster_models_1e-7/Rel_Het_model1_16ind_100gen/cluster_rel_het.Rmd
@@ -1,20 +1,20 @@
 ---
-title: "R Notebook"
+title: "Relatedness & Heterozygosity - Model 1"
 output: html_notebook
 ---
 
-This notebook helps looking at the rates of decline in heterozygosity and increase in relatedness for the different mateCHoice models.
+This notebook helps looking at the rates of decline in heterozygosity and increase in relatedness for the different mateChoice models.
 
-I have simulated the data on the server and want to analyze it now. For this i've created a folder, which is connected to the output server of this model. In this way, i dont have to load all the data on my computer.
+I have simulated the data on the server and want to analyze it now. For this I've created a folder, which is connected to the output folder on the server of this model. In this way, i don't have to load all the data on my computer.
 
 The size of the starting population is 1000 individuals or 16 individuals, which have different genomes and they mate for 100 generations.  
 
 ```{r}
 
-#This is for the output on the server for the model with 16 incividuals
-#setwd("/tmp/server_data_rel_het_16")
-#This is for the output on the server for the model with 1000 incividuals
-setwd("/tmp/server_data_rel_het_1000")
+#This is for the output on the server for the model with 16 individuals
+setwd("/tmp/server_data_rel_het_16")
+#This is for the output on the server for the model with 1000 individuals
+#setwd("/tmp/server_data_rel_het_1000")
 
 rm(list=ls(all=TRUE)) #clear R environment
 
@@ -75,7 +75,7 @@ het_mean_r <- rowMeans(het_matrix_r)
 ```
 
 
-Now i have sorted my data and can combine them into 2 graps. I do one graph which shows the relatedness over the generations in the 3 different models and one for the heterozygosity values. 
+Now i have sorted my data and can combine them into 2 graphs. I do one graph which shows the relatedness over the generations in the 3 different models and one for the heterozygosity values. 
 ```{r}
 
 
@@ -93,24 +93,26 @@ min_rel <- min(rel_matrix_nrnr, rel_matrix_nrr, rel_matrix_r)
 x_vals <- 1:100
 
 # Model nrnr: light blue points
-#Here i dont have to transpose the data, since each column is a separate data series
+#Here i don't have to transpose the data, since each column is a separate data series - as expected by the matplot command
 matplot(x_vals, rel_matrix_nrnr, type = "p", pch = 16, cex = 0.3,
         col = adjustcolor("#54BFB7FF", alpha.f = 0.01),
         xlab = "Generation", ylab = "Relatedness",
         ylim = c(min_rel, max_rel))  
 
 
-# Model nrr: light green points
+# Model nrr: light brown points
 matpoints(x_vals, rel_matrix_nrr, pch = 16, cex = 0.3, col = adjustcolor("#894B33FF", alpha.f = 0.01)) #adding points to the existing plot from above
 
-# Model r: light purple points
+# Model r: light orange points
 matpoints(x_vals, rel_matrix_r, pch = 16, cex = 0.2, col = adjustcolor("tan1", alpha.f = 0.01)) #again
 
 # === adding Mean relatedness lines to the plot ===
 lines(x_vals, rel_mean_nrnr, col = "#54BFB7FF", lwd = 2.5)
 lines(x_vals, rel_mean_nrr, col = "#894B33FF", lwd = 2)
-lines(x_vals, rel_mean_r, col = "tan1", lwd = 2)
+lines(x_vals, rel_mean_r, col = "tan1", lwd = 2, lty = 1) #When running with 1000 individuals: dashed oragnge line (lty = 4) to show the blue one behind it  - when having 16: lty = 1
 
+text(x = par("usr")[1], y = par("usr")[4], labels = "A", font = 2, cex = 1.1, adj = c(-0.5, 1.5)) 
+#par("usr") gives the plot coordinates (so top left corner of the graph - 1 & 4), then labels = ... gives the plot a label, and then make it bold and larger, and adj places the label correctly
 
 #And now the exactly same but for the heterozygosity values
 
@@ -122,31 +124,37 @@ min_het <- min(het_matrix_nrnr, het_matrix_nrr, het_matrix_r)
 matplot(x_vals, het_matrix_nrnr, type = "p", pch = 16, cex = 0.3,
         col = adjustcolor("#54BFB7FF", alpha.f = 0.01),
         xlab = "Generation", ylab = "Heterozygosity", 
-        ylim = c(min_het, max_het))  
+        ylim = c(min_het, max_het + 0.0003))  # add 0.0003 such that the "B" is not above the data
 
 
-# Model nrr: light green points
+# Model nrr: light brown points
 matpoints(x_vals, het_matrix_nrr, pch = 16, cex = 0.3, col = adjustcolor("#894B33FF", alpha.f = 0.01)) #add points
 
-# Model r: light purple points
+# Model r: light orange points
 matpoints(x_vals, het_matrix_r, pch = 16, cex = 0.2, col = adjustcolor("tan1", alpha.f = 0.01)) #add points
 
-# === adding Mean relatedness lines to the plot === (change lwd of blue line to 2.5 when plotting data of the 1000 individuals, to better visualize it)
-lines(x_vals, het_mean_nrnr, col = "#54BFB7FF", lwd = 2.5)
+# add Mean relatedness lines to the plot - (change lwd of blue line to 2.5 when plotting data of the 1000 individuals, to better visualize it)
+lines(x_vals, het_mean_nrnr, col = "#54BFB7FF", lwd = 2)
 lines(x_vals, het_mean_nrr, col = "#894B33FF", lwd = 2)
-lines(x_vals, het_mean_r, col = "tan1", lwd = 2)
+lines(x_vals, het_mean_r, col = "tan1", lwd = 2, lty = 1) #when running with 1000 individuals: dashed orange line to visualize the blue one behind (lty = 4), otherwise lty = 1
 
-mtext("Relatedness and Heterozygosity Over Time \n(1000 individuals)", side = 3, line = -2, outer = TRUE, cex = 1.2, font = 2) #creates a shared title
+mtext("Relatedness and Heterozygosity Over Time \n(16 individuals)", side = 3, line = -2, outer = TRUE, cex = 1.2, font = 2) #creates a shared title
+#change title to 16/1000 indivuals depending on the data
 #font = 2 makes the main bold
 #\n makes a new line within the title
 
 
 par(xpd = NA) #Allows drawing outside of the plot - this is for the legend
+#now add a legend
 legend("bottom", inset = c(0, -0.6), horiz = FALSE,
        legend = c("not-random not-related", "not-random related", "random"),
        col = c("#54BFB7FF", "#894B33FF", "tan1"),
-       lwd = 2, bty = "n", cex = 0.6)
+       lwd = 2, lty = c(1, 1, 1), bty = "n", cex = 0.6)
 #inset: Pushes it down below the plot
+#when 1000 individuals change to lty = c(1, 1, 4)
+
+text(x = par("usr")[1], y = par("usr")[4], labels = "B", font = 2, cex = 1.1, adj = c(-0.5, 1.5)) 
+
 
 ```
 
@@ -176,13 +184,16 @@ matplot(x_vals, rel_mean_nrnr, col = "#54BFB7FF", lwd = 2, lty = 1, type = "n",
 
 
 
-# === adding Mean relatedness lines to the plot === 
+#add Mean relatedness lines to the plot
 lines(x_vals, rel_mean_nrnr, col = "#54BFB7FF", lwd = 2)
 lines(x_vals, rel_mean_nrr, col = "#894B33FF", lwd = 2)
 #for 16 individuals
-#lines(x_vals, rel_mean_r, col = "tan1", lwd = 2)
+lines(x_vals, rel_mean_r, col = "tan1", lwd = 2)
 #for 1000 individuals - dasehd orange line
-lines(x_vals, rel_mean_r, col = "tan1", lwd = 2, lty = 4)
+#lines(x_vals, rel_mean_r, col = "tan1", lwd = 2, lty = 4)
+
+text(x = par("usr")[1], y = par("usr")[4], labels = "A", font = 2, cex = 1.1, adj = c(-0.5, 1.5)) 
+#par("usr") gives the plot coordinates (so top left corner of the graph - 1 & 4), then labels = ... gives the plot a label, and then make it bold and larger, and adj places the label correctly
 
 
 #And now the exactly same but for the heterozygosity values
@@ -194,18 +205,18 @@ min_het <- min(het_matrix_nrnr, het_matrix_nrr, het_matrix_r)
 # Model nrnr: light blue points
 matplot(x_vals, het_mean_nrnr, col = "#54BFB7FF", lwd = 2, lty = 1, type = "n",
         xlab = "Generation", ylab = "Heterozygosity", 
-        ylim = c(min_het, max_het))  
+        ylim = c(min_het, max_het + 0.0003))  
 
 
-# === adding Mean relatedness lines to the plot ===
+#add Mean relatedness lines to the plot
 lines(x_vals, het_mean_nrnr, col = "#54BFB7FF", lwd = 2)
 lines(x_vals, het_mean_nrr, col = "#894B33FF", lwd = 2)
 #for 16 individuals
-#lines(x_vals, het_mean_r, col = "tan1", lwd = 2)
+lines(x_vals, het_mean_r, col = "tan1", lwd = 2)
 #for 1000 individuals - dasehd orange line
-lines(x_vals, het_mean_r, col = "tan1", lwd = 2, lty = 4)
+#lines(x_vals, het_mean_r, col = "tan1", lwd = 2, lty = 4)
 
-mtext("Relatedness and Heterozygosity Over Time \n (1000 individuals)", side = 3, line = -2, outer = TRUE, cex = 1.2, font = 2) #creates a shared title
+mtext("Relatedness and Heterozygosity Over Time \n (16 individuals)", side = 3, line = -2, outer = TRUE, cex = 1.2, font = 2) #creates a shared title
 #font.main = 2 makes the main bold
 #change it to 16 / 1000 individuals depending on what data I'm analyzing...
 
@@ -213,13 +224,17 @@ par(xpd = NA) #Allows drawing outside of the plot - this is for the legend
 legend("bottom", inset = c(0, -0.6), horiz = FALSE,
        legend = c("not-random not-related", "not-random related", "random"),
        col = c("#54BFB7FF", "#894B33FF", "tan1"),
-       lty    = c(1, 1, 2),
+       lty    = c(1, 1, 1),
        lwd = 2, bty = "n", cex = 0.6)
 #inset: Pushes it down below the plot
+#when running it with 1000 individuals change to lty    = c(1, 1, 2)
+
+text(x = par("usr")[1], y = par("usr")[4], labels = "B", font = 2, cex = 1.1, adj = c(-0.5, 1.5)) 
+#par("usr") gives the plot coordinates (so top left corner of the graph - 1 & 4), then labels = ... gives the plot a label, and then make it bold and larger, and adj places the label correctly
 
 ```
 
-Maybe also one where one can see median and 25/75%
+And a last plot where one can see the median and 25/75% quartiles
 
 ```{r}
 
@@ -262,7 +277,7 @@ rel_p75_r    <- apply(rel_matrix_r,    1, function(x) quantile(x, 0.75, na.rm = 
 x_vals <- 1:100
 
 
-#For rel values
+#Make the plot for the rel values
 #define max and min values
 max_rel <- max(rel_matrix_nrnr, rel_matrix_nrr, rel_matrix_r)
 min_rel <- min(rel_matrix_nrnr, rel_matrix_nrr, rel_matrix_r)
@@ -270,15 +285,14 @@ min_rel <- min(rel_matrix_nrnr, rel_matrix_nrr, rel_matrix_r)
 plot(x_vals, rel_med_nrnr, type = "n",
      xlab = "Generation", ylab = "Relatedness",
      ylim = c(min_rel, max_rel)
-     #, main = "Relatedness over Generations \n(median & 25/75% - 16 individuals)")
 )
 
 #Draw median (solid line) and quartiles (dashed lines)
 # Model: non-random non-related
-#when running with 1000 individuals, change size of the blue lines, to make them visible behind the orange ones. 
-lines(x_vals, rel_med_nrnr, col = "#54BFB7FF", lwd = 3, lty = 1) #lwd is line width, lty is line type
-lines(x_vals, rel_p25_nrnr, col = "#54BFB7FF", lwd = 2, lty = 3)
-lines(x_vals, rel_p75_nrnr, col = "#54BFB7FF", lwd = 2, lty = 3)
+#when running with 1000 individuals, change size of the blue, dashed lines (lwd = 2), to make them visible behind the orange ones. 
+lines(x_vals, rel_med_nrnr, col = "#54BFB7FF", lwd = 2.5, lty = 1) #lwd is line width, lty is line type
+lines(x_vals, rel_p25_nrnr, col = "#54BFB7FF", lwd = 1.5, lty = 3)
+lines(x_vals, rel_p75_nrnr, col = "#54BFB7FF", lwd = 1.5, lty = 3)
 
 # Model: non-random related
 lines(x_vals, rel_med_nrr, col = "#894B33FF", lwd = 2.5, lty = 1)
@@ -286,10 +300,14 @@ lines(x_vals, rel_p25_nrr, col = "#894B33FF", lwd = 1.5, lty = 3)
 lines(x_vals, rel_p75_nrr, col = "#894B33FF", lwd = 1.5, lty = 3)
 
 # Model: random
-lines(x_vals, rel_med_r, col = "tan1", lwd = 2, lty = 1)
+lines(x_vals, rel_med_r, col = "tan1", lwd = 2.5, lty = 1) #change lty to 4 when running it with 1000 individuals
 lines(x_vals, rel_p25_r, col = "tan1", lwd = 1.5, lty = 3)
 lines(x_vals, rel_p75_r, col = "tan1", lwd = 1.5, lty = 3)
 
+text(x = par("usr")[1], y = par("usr")[4], labels = "A", font = 2, cex = 1.1, adj = c(-0.5, 1.5)) 
+#par("usr") gives the plot coordinates (so top left corner of the graph - 1 & 4), then labels = ... gives the plot a label, and then make it bold and larger, and adj places the label correctly
+
+#ANd exactly the same for the het values
 #define max and min values
 max_het <- max(het_matrix_nrnr, het_matrix_nrr, het_matrix_r)
 min_het <- min(het_matrix_nrnr, het_matrix_nrr, het_matrix_r)
@@ -298,30 +316,30 @@ min_het <- min(het_matrix_nrnr, het_matrix_nrr, het_matrix_r)
 
 plot(x_vals, het_med_nrnr, type = "n",
      xlab = "Generation", ylab = "Heterozygosity",
-     ylim = c(min_het, max_het)
-     #, main = "Heterozygosity over Generations \n(median & 25/75% - 16 individuals)")
+     ylim = c(min_het, max_het + 0.0003) #add 0.0003 to y, such that the "B" is not above the data
 )
 
 
 #For het values
 # Model: non-random non-related
-#when running with 1000 individuals, change size of the blue lines, to make them visible behind the orange ones. 
-lines(x_vals, het_med_nrnr, col = "#54BFB7FF", lwd = 3, lty = 1) #lwd is line width, lty is line type
-lines(x_vals, het_p25_nrnr, col = "#54BFB7FF", lwd = 2, lty = 3)
-lines(x_vals, het_p75_nrnr, col = "#54BFB7FF", lwd = 2, lty = 3)
+#when running with 1000 individuals, change size of the blue, dashed lines (lwd = 2), to make them visible behind the orange ones. 
+lines(x_vals, het_med_nrnr, col = "#54BFB7FF", lwd = 2.5, lty = 1) #lwd is line width, lty is line type
+lines(x_vals, het_p25_nrnr, col = "#54BFB7FF", lwd = 1.5, lty = 3)
+lines(x_vals, het_p75_nrnr, col = "#54BFB7FF", lwd = 1.5, lty = 3)
 
 # Model: non-random related
 lines(x_vals, het_med_nrr, col = "#894B33FF", lwd = 2.5, lty = 1)
 lines(x_vals, het_p25_nrr, col = "#894B33FF", lwd = 1.5, lty = 3)
 lines(x_vals, het_p75_nrr, col = "#894B33FF", lwd = 1.5, lty = 3)
 
-# Model: random
+# Model: random 
+#When running the code with 1000 individuals, change lty to 4 (not 1), to visualize the blue line behind it. 
 lines(x_vals, het_med_r, col = "tan1", lwd = 2, lty = 1)
 lines(x_vals, het_p25_r, col = "tan1", lwd = 1.5, lty = 3)
 lines(x_vals, het_p75_r, col = "tan1", lwd = 1.5, lty = 3)
 
 #Add a shared main
-mtext("Relatedness and Heterozygosity Over Time \n (median & 25/75% - 1000 individuals)", side = 3, line = -2, outer = TRUE, cex = 1.2, font = 2) #creates a shared title
+mtext("Relatedness and Heterozygosity Over Time \n (median & 25/75% - 16 individuals)", side = 3, line = -2, outer = TRUE, cex = 1.2, font = 2) #creates a shared title - change number of individuals!
 #font.main = 2 makes the main bold
 
 #Add the legend
@@ -331,10 +349,13 @@ legend("bottom", inset = c(0, -0.6), horiz = FALSE, ncol     = 3,
        col    = c("#54BFB7FF", "#54BFB7FF",
                   "#894B33FF", "#894B33FF",
                   "tan1",       "tan1"),
-       lty    = c(1, 2, 1, 2, 1, 2),
+       lty    = c(1, 2, 1, 2, 1, 2), #change fifth digit to 4 when running with 1000 individuals
        lwd    = c(2.5, 1.5, 2.5, 1.5, 2.5, 1.5),
       bty = "n", cex = 0.6)
 #inset: Pushes it down below the plot
+
+text(x = par("usr")[1], y = par("usr")[4], labels = "B", font = 2, cex = 1.1, adj = c(-0.5, 1.5)) 
+#par("usr") gives the plot coordinates (so top left corner of the graph - 1 & 4), then labels = ... gives the plot a label, and then make it bold and larger, and adj places the label correctly
 
 
 ```
