--- a/cluster_models_1e-7/model2_62ind_100gen_r/Model2_clusterdat.Rmd
+++ b/cluster_models_1e-7/model2_62ind_100gen_r/Model2_clusterdat.Rmd
@@ -1,15 +1,16 @@
 ---
-title: "R Notebook"
+title: "Model 2"
+author: "Emma Ochsner"
 output: html_notebook
 ---
 
-This notebook is for analyzing the outputs from the model2 in SLiM. 
+This notebook is for analyzing the outputs from the model 2 in SLiM. 
 The working directory is set to a folder on the server, where i saved my outputs of this simulation. 
 
 ```{r}
 rm(list=ls(all=TRUE)) #clear R environment
 
-#All of the followind were done with recombination rate of 1e-7
+#All of the following were done with recombination rate of 1e-7
 #This one is for 8-500 ind, mating for 100 gen
 #setwd("/tmp/server_data")
 
@@ -34,14 +35,14 @@ rm(list=ls(all=TRUE)) #clear R environment
 #This one is for a recombination rate of 1e-9 - 8-62 ind, mating for 100 Gen RANDOM
 setwd("/tmp/server_data_1e-9_model2")
 
-list.files()
 # find all the SLiM output files
 files <- list.files(pattern = "model2_reps")
 
 
-# loop through and extract metrics -> I want relatedness at the beginning and heterozygosity at the end
+# loop through and extract metrics -> I want to extract relatedness at the beginning and heterozygosity at the end
+#lapply applies following function to all the files
 res_list <- lapply(files, function(f){
-  dat <- read.table(f, header = FALSE)  
+  dat <- read.table(f, header = FALSE)  #no header in the files
   data.frame(
     relatedness_start   = dat[1, 2],
     relatedness_end = dat[2,2],
@@ -50,7 +51,7 @@ res_list <- lapply(files, function(f){
   )
 })
 
-# 4) bind into one data.frame
+# bind the values into one data.frame
 df <- do.call(rbind, res_list)
 
 ```
@@ -59,8 +60,9 @@ df <- do.call(rbind, res_list)
 And now make the plot
 ```{r}
 
-par(mfrow = c(1,2))
-# 5) quick base‐R scatterplot
+par(mfrow = c(1,2)) #to have two plots next to each other
+# quick base‐R scatterplot
+#First for starting relatedness to end heterozygosity
 plot(
   df$relatedness_start,
   df$heterozygosity_end,
@@ -71,11 +73,13 @@ plot(
   cex = 0.4
 )
 
-# (optional) add a linear fit
+# add a linear fit (regression line)
 abline(lm(heterozygosity_end ~ relatedness_start, data = df), col = "#54BFB7FF", lwd = 2)
 
+text(x = par("usr")[1], y = par("usr")[4], labels = "A", font = 2, cex = 1.1, adj = c(-0.5, 1.5)) 
+#par("usr") gives the plot coordinates (so top left corner of the graph - 1 & 4), then labels = ... gives the plot a label, and then make it bold and larger, and adj places the label correctly
 
-# Pearson’s correlation
+# Pearson’s correlation -> test for significant correlation
 pearson_res <- cor.test(
   df$relatedness_start,
   df$heterozygosity_end,
@@ -83,7 +87,8 @@ pearson_res <- cor.test(
 )
 print(pearson_res)
 
-# 5) quick base‐R scatterplot
+# quick base‐R scatterplot
+#Another one for starting heterozygosity to end heterozygosity
 plot(
   df$heterozygosity_start,
   df$heterozygosity_end,
@@ -94,8 +99,11 @@ plot(
   cex = 0.4
 )
 
-# (optional) add a linear fit
+# add a linear fit
 abline(lm(heterozygosity_end ~ heterozygosity_start, data = df), col = "#54BFB7FF", lwd = 2)
+
+text(x = par("usr")[1], y = par("usr")[4], labels = "B", font = 2, cex = 1.1, adj = c(-0.5, 1.5)) 
+#par("usr") gives the plot coordinates (so top left corner of the graph - 1 & 4), then labels = ... gives the plot a label, and then make it bold and larger, and adj places the label correctly
 
 # Pearson’s correlation
 pearson_res <- cor.test(
@@ -109,9 +117,10 @@ print(pearson_res)
 
 ```
 
-
+And also plot starting heterozygosity to starting relatedness
 
 ```{r}
+
 plot(
   df$relatedness_start,
   df$heterozygosity_start,
@@ -122,7 +131,7 @@ plot(
   cex = 0.4
 )
 
-# (optional) add a linear fit
+# add a linear fit
 abline(lm(heterozygosity_start ~ relatedness_start, data = df), col = "#54BFB7FF", lwd = 2)
 
 
