--- a/cluster_models_1e-7/matings/Cluster_matings.Rmd
+++ b/cluster_models_1e-7/matings/Cluster_matings.Rmd
@@ -155,7 +155,7 @@ legend("topright",legend = c("Females", "Males"),
   lty = 1, col = c("#54BFB7FF", "tan1"), cex = 0.6) #cex makes it smaller
 
 #Now add an "A" to this plot
-text(x = par("usr")[1], y = par("usr")[4], labels = "A", font = 2, cex = 1.1, adj = c(-0.5, 1.5))  
+text(x = par("usr")[1], y = par("usr")[4], labels = "C", font = 2, cex = 1.1, adj = c(-0.5, 1.5))  
 #par("usr") gives the plot coordinates (so top left corner of the graph - 1 & 4), then labels = ... gives the plot a label, and then make it bold and larger, and adj places the label correctly
 
 #And the second plot for the R data - exactly the same as for the Nrnr data
@@ -183,7 +183,9 @@ lines(x_vals_r, df_means_r$meanMissingMales_r, type = "l", col = "tan1")
 legend("topright",legend = c("Females", "Males"),
   lty = 1, col = c("#54BFB7FF", "tan1"), cex = 0.6)
 
-text(x = par("usr")[1], y = par("usr")[4], labels = "B", font = 2, cex = 1.1, adj = c(-0.5, 1.5)) 
+text(x = par("usr")[1], y = par("usr")[4], labels = "D", font = 2, cex = 1.1, adj = c(-0.5, 1.5)) 
+
+mtext("(1000 individuals)", side = 3, line = -2, outer = TRUE, cex = 1.2, font = 2) #creates a shared title - change number of individuals!
 
 
 
