--- a/MODEL 2/model2_onlySLiM.Rmd
+++ b/MODEL 2/model2_onlySLiM.Rmd
@@ -32,7 +32,8 @@ Now i want to analyze the files/data i just generated
 
 ```{r}
 #first set the working directory - change this to where the output files are saved...
-setwd("~/Documents/GitHub/2502_emma_bsc") 
+#setwd("~/Documents/GitHub/2502_emma_bsc") 
+setwd("~/Documents/GitHub/2502_emma_bsc/MODEL 2/model2_100reps_8-500ind_100gen_r")
 
 rm(list=ls(all=TRUE)) #clear R environment
 
@@ -44,8 +45,8 @@ files <- list.files(pattern = "model2_reps")
 res_list <- lapply(files, function(f){
   dat <- read.table(f, header = FALSE)  #no header implemented in the output files
   data.frame(
-    relatedness_start   = dat[1, 2], #define the values in the output files
-    heterozygosity_end  = dat[2, 3]
+    relatedness_start = dat[1, 2], #define the values in the output files
+    heterozygosity_end = dat[2, 3]
   )
 })
 
@@ -95,11 +96,13 @@ ggplot(df, aes(x = relatedness_start, y = heterozygosity_end)) +
 ```
 
 
-In this chunk i plot starting heterozygosity vs end heterozygosity, to see if they show a correlation. 
+In this chunk I plot starting heterozygosity vs end heterozygosity, to see if they show a correlation. 
 ```{r}
 
 #first set the working directory
-setwd("~/Documents/GitHub/2502_emma_bsc") 
+#setwd("~/Documents/GitHub/2502_emma_bsc") 
+setwd("~/Documents/GitHub/2502_emma_bsc/MODEL 2/model2_100reps_8-500ind_100gen_r")
+
 
 rm(list=ls(all=TRUE)) #clear R environment
 
@@ -147,7 +150,9 @@ In this chunk i plot starting heterozygosity vs starting heterozygosity, to see 
 
 ```{r}
 #first set the working directory
-setwd("~/Documents/GitHub/2502_emma_bsc") 
+#setwd("~/Documents/GitHub/2502_emma_bsc") 
+setwd("~/Documents/GitHub/2502_emma_bsc/MODEL 2/model2_100reps_8-500ind_100gen_r")
+
 rm(list=ls(all=TRUE)) #clear R environment
 
 # find all the SLiM output files with this specific pattern
